--- a/00-intro.rmd
+++ b/00-intro.rmd
@@ -1,3 +1,7 @@
+---
+title: "📕"
+---
+
 # Введение в Цикл {-}
 
 > *Together is a wonderful place to be. (Вместе - это замечательное место.)*  — Dwayna Litz
